wip: update tolerations
